--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Importações -->
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
     <!-- Importações Web -->
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Customização -->
-    <link rel="shortcut icon" href="/src/ICON.png">
+    <link rel="shortcut icon" href="./src/ICON.png">
     <title>Meu Portifólio</title>
 </head>
 <!-- Body com tema Dark -->
@@ -27,7 +27,7 @@
           <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                    <img src="/src/SICON.png" alt="SpruceOak's Icon" width="30" height="30">
+                    <img src="./src/SICON.png" alt="SpruceOak's Icon" width="30" height="30">
             </a>
               <a class="navbar-brand" href="#">SpruceOak</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
