--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
     <section id="Sobre">
         <div class="container" id="sobrecontent">
             <div class="textoSobre">
-                <h2>Um Pouco Sobre Mim</h2>
-                <p>Eae! Este é o meu "Sobre"<br>Meio genérico, não?</p>
-                <p>Essa é apenas a primeira versão do meu portifólio. Futuramente ela estará bem louca!<br>Meu nome é Luiz Guilherme Sales da Cruz, um nome grande, mas pode me chamar só de Sales ou Spruce!<br>Sou um entusiasta da área de tecnologia, especialmente na área de desenvolvimento. Desenvolvimento de quê? Ah, de tudo um muito!</p>
-                <p>Sou um artísta autônomo e o que mais gosto de fazer é produzir arte e desenvolver sistemas e customizar páginas!<br>Tenho atualmente 19 anos e embora eu seja meio quieto, sou bem descontraído!</p>
+                <h2>Sobre Mim</h2>
+                <p>Eae! Este é o meu "Sobre Mim"<br>Meio genérico, não?</p>
+                <p>Esta é apenas a primeira versão do meu portifólio. Futuramente ela estará bem louca!<br>Meu nome é Luiz Guilherme Sales da Cruz, um nome grande, mas pode me chamar só de Sales!<br>Sou um entusiasta da área de tecnologia, especialmente na área de desenvolvimento. Desenvolvimento de quê? Ah, de tudo um muito!</p>
+                <p>Sou um artísta autônomo e o que mais gosto de fazer é produzir, desenvolver e customizar páginas!<br>Tenho atualmente 19 anos e embora me pareça meio quieto, sou bem descontraído!</p>
             </div>
             <div class="imagemTipoUm"><img src=" " alt="SobreIMG "></div>
         </div>
