--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
       speed: 400,
       glare: true,
       gyroscope: true,
+      gyroscopeMinAngleX:     -45,
+    gyroscopeMaxAngleX:     45,
+    gyroscopeMinAngleY:     -45,
+    gyroscopeMaxAngleY:     45,
       "max-glare": 0.5
     });
   </script>
