--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
             <button class="btn btn-outline-light" type="submit">Search</button>
           </form>
           <div class="redes">
-            <a href="">
+            <a href="https://github.com/Sales-SpruceOak">
               <i class="bi bi-github"></i>
             </a>
-            <a href="">
+            <a href="https://discord.gg/HRVqNc8uBC">
               <i class="bi bi-discord"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/spruceoak/">
               <i class="bi bi-instagram"></i>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/luiz-g-sales-da-cruz-566b84329/">
               <i class="bi bi-linkedin"></i>
             </a>
           </div>
