--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       max: 25,
       speed: 400,
       glare: true,
-      gyroscope: true,
+      gyroscope: false,
       gyroscopeMinAngleX: -45,
       gyroscopeMaxAngleX: 45,
       gyroscopeMinAngleY: -45,
