--- a/index.html
+++ b/index.html
@@ -332,10 +332,6 @@
       speed: 400,
       glare: true,
       gyroscope: false,
-      gyroscopeMinAngleX: -45,
-      gyroscopeMaxAngleX: 45,
-      gyroscopeMinAngleY: -45,
-      gyroscopeMaxAngleY: 45,
       "max-glare": 0.5
     });
   </script>
@@ -345,6 +341,7 @@
       max: 25,
       speed: 400,
       glare: true,
+      gyroscope: false,
       "max-glare": 0.5
     });
   </script>
